# QLogger

./: .gitignore  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: defines.h.C148D2DDAF030D8A.idx  platform.h.71309E5F95DCA846.idx  qlogger.cc.F62164052F734BBD.idx  qlogger.h.364B7A9884132BDC.idx  qlogger.h.7C6EF3757E7F357F.idx  simple.cc.936FA3C58B20FF07.idx
examples/: simple.cc
include/qlogger/: qlogger.h
include/qlogger/platform/: defines.h  platform.h
src/: qlogger.cc
src/platform/: platform_linux.cc  platform_windows.cc
